--- a/NP_Config/Help_Type_2.xaml
+++ b/NP_Config/Help_Type_2.xaml
@@ -38,20 +38,20 @@
                             </Grid.ColumnDefinitions>
                             <Grid Grid.Column="0">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB11" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB12" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB13" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB14" Width="35" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB31" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB32" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB33" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB34" Width="35" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="1">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB15" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB35" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="2">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB16" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB36" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                         </Grid>
@@ -75,8 +75,51 @@
                             <TextBlock Grid.Column="1" Text="2" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource TextBlockStyle_Type5}"/>
                             <TextBlock Grid.Column="2" Text="3" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource TextBlockStyle_Type5}"/>
                         </Grid>
-                        <Grid Grid.Row="4">
+                        <Grid Grid.Row="4" Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="30"></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="1 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="3" Text="2 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="7" Text="3 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                            </Grid>
+                            <Grid Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" FontSize="11" Text="IP адрес разъема Т1 (разъема Т1 первого канала в режиме двухканальной работы)" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="1" FontSize="11" Text="конфигурируемого модуля NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
 
+                                <TextBlock Grid.Row="3" FontSize="11" Text="UDP порт модуля NP для обмена данными с контроллером ЖАТ, подключенного" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="4" FontSize="11" Text="к разъему Т1 (разъему Т1 первого канала в режиме двухканальной работы)." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="5" FontSize="11" Text="В режиме работы ModbusTCP – это безопасный адрес модуля NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
+
+                                <TextBlock Grid.Row="7" FontSize="11" Text="UDP порт конфигурируемого модуля NP и порт для диагностического" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="8" FontSize="11" Text="программного обеспечения (диагностической программы)." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                            </Grid>
                         </Grid>
                     </Grid>
 
@@ -99,20 +142,20 @@
                             </Grid.ColumnDefinitions>
                             <Grid Grid.Column="0">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB21" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB22" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB23" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB24" Width="35" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB41" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB42" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB43" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB44" Width="35" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="1">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB25" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB45" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="2">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB26" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB46" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                         </Grid>
@@ -136,8 +179,51 @@
                             <TextBlock Grid.Column="1" Text="2" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource TextBlockStyle_Type5}"/>
                             <TextBlock Grid.Column="2" Text="3" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource TextBlockStyle_Type5}"/>
                         </Grid>
-                        <Grid Grid.Row="4">
+                        <Grid Grid.Row="4" Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="30"></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="1 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="3" Text="2 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="7" Text="3 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                            </Grid>
+                            <Grid Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" FontSize="11" Text="IP адрес разъема Т2 (разъема Т1 второго канала в режиме двухканальной работы)" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="1" FontSize="11" Text="конфигурируемого модуля NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
 
+                                <TextBlock Grid.Row="3" FontSize="11" Text="UDP порт модуля NP для обмена данными с контроллером ЖАТ, подключенного" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="4" FontSize="11" Text="к разъему Т2 (разъему Т1 второго канала в режиме двухканальной работы)." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="5" FontSize="11" Text="В режиме работы ModbusTCP – это безопасный адрес модуля NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
+
+                                <TextBlock Grid.Row="7" FontSize="11" Text="UDP порт конфигурируемого модуля NP и порт для диагностического" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="8" FontSize="11" Text="программного обеспечения (диагностической программы)." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                            </Grid>
                         </Grid>
                     </Grid>
                 </Grid>
