--- a/NP_Config/Help_Type_3.xaml
+++ b/NP_Config/Help_Type_3.xaml
@@ -38,20 +38,20 @@
                             </Grid.ColumnDefinitions>
                             <Grid Grid.Column="0">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB11" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB12" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB13" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB14" Width="35" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB51" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB52" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB53" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB54" Width="35" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="1">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB15" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB55" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="2">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB16" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB56" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                         </Grid>
@@ -75,8 +75,56 @@
                             <TextBlock Grid.Column="1" Text="2" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource TextBlockStyle_Type5}"/>
                             <TextBlock Grid.Column="2" Text="3" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource TextBlockStyle_Type5}"/>
                         </Grid>
-                        <Grid Grid.Row="4">
+                        <Grid Grid.Row="4" Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="30"></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition Height="10"></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition Height="10"></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="1 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="3" Text="2 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="7" Text="3 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                            </Grid>
+                            <Grid Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition Height="10"></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition Height="10"></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
 
+                                <TextBlock Grid.Row="0" FontSize="11" Text="IP адрес контроллера ЖАТ, подключенного к разъему Т1 (к разъему Т1 первого" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="1" FontSize="11" Text="канала в режиме двухканальной работы) конфигурируемого модуля NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
+
+                                <TextBlock Grid.Row="3" FontSize="11" Text="UDP порт контроллера ЖАТ, подключенного к разъему Т1 (к разъему Т1 первого" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="4" FontSize="11" Text="канала в режиме двухканальной работы) конфигурируемого модуля NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="5" FontSize="11" Text="В режиме работы ModbusTCP – это безопасный адрес контроллера." Style="{DynamicResource TextBlockStyle_Type1}"/>
+
+                                <TextBlock Grid.Row="7" FontSize="11" Text="UDP порт для обмена данными между модулями NP, подключенными к разъему Т1" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="8" FontSize="11" Text="(к разъему Т1 первого канала в режиме двухканальной работы). Предпочтительно" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="9" FontSize="11" Text="использовать порт 2000 для всех модулей NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="10" FontSize="11" Text="Порт, устанавливаемый в поле 2, не должен совпадать с портом, указанном в поле 3." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                            </Grid>
                         </Grid>
                     </Grid>
 
@@ -99,20 +147,20 @@
                             </Grid.ColumnDefinitions>
                             <Grid Grid.Column="0">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB21" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB22" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB23" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
-                                    <TextBox Name="TB24" Width="35" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB61" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB62" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB63" Width="35" Margin="5,2,0,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
+                                    <TextBox Name="TB64" Width="35" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="1">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB25" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB65" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="2">
                                 <StackPanel Orientation="Horizontal" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBox Name="TB26" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}"/>
+                                    <TextBox Name="TB66" Width="45" Margin="5,2,5,2" Style="{DynamicResource TextBoxStyle_Type1}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
                         </Grid>
@@ -136,8 +184,56 @@
                             <TextBlock Grid.Column="1" Text="2" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource TextBlockStyle_Type5}"/>
                             <TextBlock Grid.Column="2" Text="3" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource TextBlockStyle_Type5}"/>
                         </Grid>
-                        <Grid Grid.Row="4">
+                        <Grid Grid.Row="4" Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="30"></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition Height="10"></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition Height="10"></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="1 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="3" Text="2 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="7" Text="3 - " HorizontalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                            </Grid>
+                            <Grid Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition Height="10"></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition Height="10"></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
 
+                                <TextBlock Grid.Row="0" FontSize="11" Text="IP адрес контроллера ЖАТ, подключенного к разъему Т2 (к разъему Т1 второго" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="1" FontSize="11" Text="канала в режиме двухканальной работы) конфигурируемого модуля NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
+
+                                <TextBlock Grid.Row="3" FontSize="11" Text="UDP порт контроллера ЖАТ, подключенного к разъему Т2 (к разъему Т1 второго" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="4" FontSize="11" Text="канала в режиме двухканальной работы) конфигурируемого модуля NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="5" FontSize="11" Text="В режиме работы ModbusTCP – это безопасный адрес контроллера." Style="{DynamicResource TextBlockStyle_Type1}"/>
+
+                                <TextBlock Grid.Row="7" FontSize="11" Text="UDP порт для обмена данными между модулями NP, подключенными к разъему Т2" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="8" FontSize="11" Text="(к разъему Т1 второго канала в режиме двухканальной работы). Предпочтительно" Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="9" FontSize="11" Text="использовать порт 2000 для всех модулей NP." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                                <TextBlock Grid.Row="10" FontSize="11" Text="Порт, устанавливаемый в поле 2, не должен совпадать с портом, указанном в поле 3." Style="{DynamicResource TextBlockStyle_Type1}"/>
+                            </Grid>
                         </Grid>
                     </Grid>
                 </Grid>
